# MecanumBot

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.MD  motor_controller.cpp  motor_controller.old.cpp  n64.config.yaml
include/: bimotor.hpp  mecanumbot.hpp
mecanumbot_msgs/: CMakeLists.txt  package.xml
mecanumbot_msgs/msg/: WheelTicksMessage.msg
mecanumbot_v1_pkg/: CMakeLists.txt  package.xml
mecanumbot_v1_ws/src/localization_data_pub/: CMakeLists.txt
mecanumbot_v1_ws/src/localization_data_pub/launch/: rviz_click_to_2d_launch.py
mecanumbot_v1_ws/src/localization_data_pub/src/: rviz_click_to_2d.cpp
mecanumbot_v1_ws/src/mecanumbot/: CMakeLists.txt  package.xml
mecanumbot_v1_ws/src/mecanumbot/include/mecanumbot/: odometry_pub.hpp
mecanumbot_v1_ws/src/mecanumbot/launch/: mecanumbot_launch.py
mecanumbot_v1_ws/src/mecanumbot/localization_data_pub/: CMakeLists.txt  package.xml
mecanumbot_v1_ws/src/mecanumbot/localization_data_pub/src/: ekf_odom_pub.cpp  odometry_pub.cpp
mecanumbot_v1_ws/src/mecanumbot/src/: mecanumbot_node.cpp  odometry_pub.cpp  test.py
mecanumbot_v1_ws/src/teleop_twist_joy/config/: n64.config.yaml
mecanumbot_v1_ws/src/teleop_twist_joy/launch/: teleop-launch.py
micro_ros_motor_ctrl/: CMakeLists.txt  micro_ros_motor_ctrl.c  micro_ros_motor_ctrl_multi_threaded.c
micro_ros_motor_ctrl/include/: bimotor.h  mecanumbot.h
micro_ros_motor_ctrl/include/micro_ros_motor_ctrl/: bimotor.h  mecanumbot.h
micro_ros_motor_ctrl/src/: bimotor.c  events.c  mecanumbot.c
pico_motor_controller/: motor_controller.cpp  pico_sdk_import.cmake
pico_motor_controller/src/: mecanumbot.cpp
ros2pkg/mecanumbot/: CMakeLists.txt  package.xml
ros2pkg/mecanumbot/src/: mecanum_controller.cpp
ros2pkg/src/mecanumbot/: CMakeLists.txt  package.xml
ros2pkg/src/mecanumbot/src/: pub_mecanumbot_teleop.cpp  sub_motor_controller.cpp
scripts/: 1_Install_micro_ros_raspberrypi_pico_sdk.sh  2_build_micro_ros_motor_ctrl.sh  3_setup_i2c.sh  install_deps.sh
src/: bimotor.cpp  events.cpp  mecanumbot.cpp
